# erics_tuning

./: .gitignore  IMPROVEMENTS.aux  IMPROVEMENTS.md  IMPROVEMENTS.out  IMPROVEMENTS.tex  IMPROVEMENTS.toc  README.md  audioTest.py  frequencyAnalysis.py  layout.ui  number_input.py  pyproject.toml  run.sh  tf.txt  tuning.py
analyzer/: tuning_config.json
bak/: audioTest.py  config.json  tuning.py
bak/analyzer/: frequencyAnalysis.py  tuning_config.json
bak/screens/: __init__.py  audio_devices.py  logs.py  piano_frequencies.py
bak/static/: style.tcss
docs/: todo.md
erics-tuning/: __main__.py
erics-tuning/tui/screens/: analyzer_layout.py  range_preset.py
logs/: todo.md
src/tune/: config.yaml
src/tune/analyzer/: main.py
src/tune/analyzer/analyzers/: base.py  normalized_fft.py  peak_detection.py  pyin.py
src/tune/cli/: parser.py
src/tune/shared/audio/: device_info.py  pyaudio_handler.py  stream_buffer.py  stream_handler.py
src/tune/shared/transponder/: broker.py  packet.py  transponder.py  types.py
src/tune/shared/types/: array_buffer.py  data_buffer.py  piano_string.py  pitch.py  settings_specs.py
src/tune/shared/util/: config.py  config_loader.py  output_manager.py  paths.py  setup_logging.py  type_registry.py
src/tune/tui/: app.py
src/tune/tui/screens/: analyzer_layout.py  audio_devices.py  launcher.py  main_screen.py  piano_frequencies.py  range_preset.py
src/tune/tui/static/: style.tcss
src/tune/tui/widgets/: current_note.py  monitor.py  piano_frequencies.py  process_window.py  status_light.py
src/tune/tui/workers/: log_reader.py  process_runner.py
src/tune/visualizer/: __init__.py  app.py  visualizer.py
src/tune/visualizer/layout/: layout.py  layout.ui  main_window.py
src/tune/visualizer/panels/: base.py  fourier.py  pitch_confidence.py  spectrogram.py
